--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -249,6 +249,16 @@
               </div>
             </div>
 
+
+
+
+
+
+
+
+
+
+
             <div class="control-group">
               <label class="control-label">{{ui.profile.phone}}</label>
 
@@ -261,7 +271,7 @@
                   <input type="text"
                          class="inputPhoneNumber-1"
                          ng-model="profilemeta.phones[1]"
-                         ng-change="phoneNumberParser(profilemeta.phones[1])"
+                         ng-change="profilePhoneNumberParser(1, profilemeta.phones[1])"
                          value="{{data.resources.PhoneAddresses[0]}}"
                          style="width: 155px">
                 </div>
@@ -272,7 +282,7 @@
                   <input type="text"
                          class="inputPhoneNumber-1"
                          ng-model="profilemeta.phones[1]"
-                         ng-change="phoneNumberParser(profilemeta.phones[1])"
+                         ng-change="profilePhoneNumberParser(profilemeta.phones[1])"
                          value="{{data.resources.PhoneAddresses[0]}}"
                          style="width: 155px">
                   <button class="btn btn-success"
@@ -281,17 +291,18 @@
                     <i class="icon-white icon-plus"></i> Add new
                   </button>
                 </div>
+                <!--<p class="text-error"-->
+                   <!--ng-show="!profilemeta.PhoneAddress">-->
+                  <!--<small><i>Please fill your phone number!</i></small>-->
+                <!--</p>-->
+                <!--<pre><small>{{profilePhoneNumberParsed[1]}}</small></pre>-->
                 <p class="text-error"
-                   ng-show="!profilemeta.PhoneAddress">
-                  <small><i>Please fill your phone number!</i></small>
-                </p>
-                <p class="text-error"
-                   ng-hide="phoneNumberParsed.result">
-                  <small><i>{{phoneNumberParsed.message}}</i></small>
+                   ng-hide="profilePhoneNumberParsed[1].result">
+                  <small><i>{{profilePhoneNumberParsed[1].message}}</i></small>
                 </p>
                 <p class="text-success"
-                   ng-show="phoneNumberParsed.result">
-                  <small><i>{{phoneNumberParsed.message}}</i></small>
+                   ng-show="profilePhoneNumberParsed[1].result">
+                  <small><i>{{profilePhoneNumberParsed[1].message}}</i></small>
                 </p>
               </div>
 
@@ -300,27 +311,27 @@
                 <div class="input-prepend"
                      ng-show="phoneViews.third">
                   <span class="add-on"
-                        style="width: 70px">Extra.2</span>
+                        style="width: 70px">Extra.1</span>
                   <input type="text"
                          class="inputPhoneNumber-2"
                          ng-model="profilemeta.phones[2]"
-                         ng-change="phoneNumberParser(profilemeta.phones[2])"
+                         ng-change="profilePhoneNumberParser(2, profilemeta.phones[2])"
                          value="{{data.resources.PhoneAddresses[1]}}"
                          style="width: 155px">
                 </div>
                 <div class="input-prepend input-append"
                      ng-hide="phoneViews.third">
                   <span class="add-on"
-                        style="width: 70px">Extra.2</span>
+                        style="width: 70px">Extra.1</span>
                   <input type="text"
                          class="inputPhoneNumber-2"
                          ng-model="profilemeta.phones[2]"
-                         ng-change="phoneNumberParser(profilemeta.phones[2])"
+                         ng-change="profilePhoneNumberParser(2, profilemeta.phones[2])"
                          value="{{data.resources.PhoneAddresses[1]}}"
                          style="width: 155px">
                   <button class="btn"
                           type="button"
-                          ng-click="removePhoneNumber('second')">
+                          ng-click="removePhoneNumber(2, 'second')">
                     <i class="icon-remove"></i> Remove
                   </button>
                   <button class="btn btn-success"
@@ -330,17 +341,18 @@
                     <i class="icon-white icon-plus"></i> Add new
                   </button>
                 </div>
+                <!--<p class="text-error"-->
+                   <!--ng-show="!profilemeta.PhoneAddress">-->
+                  <!--<small><i>Please fill your phone number!</i></small>-->
+                <!--</p>-->
+                <!--<pre><small>{{profilePhoneNumberParsed[2]}}</small></pre>-->
                 <p class="text-error"
-                   ng-show="!profilemeta.PhoneAddress">
-                  <small><i>Please fill your phone number!</i></small>
-                </p>
-                <p class="text-error"
-                   ng-hide="phoneNumberParsed.result">
-                  <small><i>{{phoneNumberParsed.message}}</i></small>
+                   ng-hide="profilePhoneNumberParsed[2].result">
+                  <small><i>{{profilePhoneNumberParsed[2].message}}</i></small>
                 </p>
                 <p class="text-success"
-                   ng-show="phoneNumberParsed.result">
-                  <small><i>{{phoneNumberParsed.message}}</i></small>
+                   ng-show="profilePhoneNumberParsed[2].result">
+                  <small><i>{{profilePhoneNumberParsed[2].message}}</i></small>
                 </p>
               </div>
 
@@ -348,34 +360,49 @@
                    ng-show="phoneViews.third">
                 <div class="input-prepend input-append">
                   <span class="add-on"
-                        style="width: 70px">Extra.3</span>
+                        style="width: 70px">Extra.2</span>
                   <input type="text"
                          class="inputPhoneNumber-3"
                          ng-model="profilemeta.phones[3]"
-                         ng-change="phoneNumberParser(profilemeta.phones[3])"
+                         ng-change="profilePhoneNumberParser(3, profilemeta.phones[3])"
                          value="{{data.resources.PhoneAddresses[2]}}"
                          style="width: 155px">
                   <button class="btn"
                           type="button"
-                          ng-click="removePhoneNumber('third')">
+                          ng-click="removePhoneNumber(3, 'third')">
                     <i class="icon-remove"></i> Remove
                   </button>
                 </div>
+                <!--<p class="text-error"-->
+                   <!--ng-show="!profilemeta.PhoneAddress">-->
+                  <!--<small><i>Please fill your phone number!</i></small>-->
+                <!--</p>-->
+                <!--<pre><small>{{profilePhoneNumberParsed[3]}}</small></pre>-->
                 <p class="text-error"
-                   ng-show="!profilemeta.PhoneAddress">
-                  <small><i>Please fill your phone number!</i></small>
-                </p>
-                <p class="text-error"
-                   ng-hide="phoneNumberParsed.result">
-                  <small><i>{{phoneNumberParsed.message}}</i></small>
+                   ng-hide="profilePhoneNumberParsed[3].result">
+                  <small><i>{{profilePhoneNumberParsed[3].message}}</i></small>
                 </p>
                 <p class="text-success"
-                   ng-show="phoneNumberParsed.result">
-                  <small><i>{{phoneNumberParsed.message}}</i></small>
+                   ng-show="profilePhoneNumberParsed[3].result">
+                  <small><i>{{profilePhoneNumberParsed[3].message}}</i></small>
                 </p>
               </div>
 
+              <!--<pre><small>{{profilemeta.phones}}</small></pre>-->
+
             </div>
+
+
+
+
+
+
+
+
+
+
+
+
 
             <div class="control-group">
               <label class="control-label">{{ui.profile.address}}</label>
